# campus-platform

./: .env.docker.example  .gitignore  README.md  TODO.md  docker-compose.prod.yml  docker-compose.yml
backend/: Cargo.toml  Dockerfile
backend/examples/: seed_mock_data.rs
backend/migrations/: 001_init.sql
backend/src/: config.rs  db.rs  error.rs  main.rs  redis.rs
backend/src/middleware/: auth.rs
backend/src/modules/: admin.rs  auth.rs  courses.rs  materials.rs  mod.rs  projects.rs  reviews.rs  upload.rs  users.rs
docs/: 01-功能规划.md  02-原型设计.md  03-技术选型.md  04-系统设计.md  docker-deploy.md
frontend/: index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue
frontend/src/api/: admin.ts  auth.ts  courses.ts  index.ts  materials.ts  profile.ts  projects.ts  reviews.ts
frontend/src/layouts/: AdminLayout.vue  DefaultLayout.vue
frontend/src/router/: index.ts
frontend/src/stores/: auth.ts
frontend/src/types/: index.ts
frontend/src/views/admin/: ContentAudit.vue  CourseManage.vue  Dashboard.vue  ProjectManage.vue  UserManage.vue
frontend/src/views/auth/: Login.vue  Register.vue
frontend/src/views/courses/: CourseDetail.vue  CourseList.vue
frontend/src/views/profile/: Profile.vue
frontend/src/views/projects/: ProjectCreate.vue  ProjectDetail.vue  ProjectList.vue
